<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AfterConnectionActivity">


    <TextView
        android:id="@+id/tvConnected"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/Connected_to"
        android:textColor="@color/main_text"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/imgConn"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/imgConn"
        app:layout_constraintTop_toBottomOf="@+id/imgConn" />

    <Button
        android:id="@+id/bDisconnect"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/disconnect"
        android:textColor="@color/main_text"
        app:layout_constraintEnd_toEndOf="@+id/tvConnected"
        app:layout_constraintStart_toStartOf="@+id/tvConnected"
        app:layout_constraintTop_toBottomOf="@+id/tvDeviceIP" />

    <Button
        android:id="@+id/bAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/about"
        android:textColor="@color/main_text"
        app:layout_constraintEnd_toEndOf="@+id/bRC"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bRC"
        app:layout_constraintTop_toBottomOf="@+id/bRC" />

    <Button
        android:id="@+id/bRC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/go_to_remote_control"
        android:textColor="@color/main_text"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/bDisconnect"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/bDisconnect"
        app:layout_constraintTop_toBottomOf="@+id/bDisconnect" />

    <TextView
        android:id="@+id/tvDeviceIP"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/deviceip"
        android:textColor="@color/hint"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_connected_server"
        app:layout_constraintStart_toStartOf="@+id/tv_connected_server"
        app:layout_constraintTop_toBottomOf="@+id/tv_connected_server" />

    <TextView
        android:id="@+id/tv_connected_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:text="@string/connectedserver"
        android:textColor="@color/hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvConnected" />

    <ImageView
        android:id="@+id/imgConn"
        android:layout_width="232dp"
        android:layout_height="135dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_link" />

    <!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:backgroundTint="@color/buttons"-->
<!--        app:itemIconTint="@color/main_text"-->
<!--        app:itemTextColor="@color/main_text"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:menu="@menu/bottom_menu" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
